--- a/src/index.css
+++ b/src/index.css
@@ -32,14 +32,14 @@
     font-size: 1.8rem;
   }
 }
-@media (max-width: 500px) {
+/* @media (max-width: 500px) {
   .home {
     height: 75vh;
   }
   .home-flex {
     justify-content: flex-end;
   }
-}
+} */
 
 @media (min-width: 1280px) {
   .footer {
